<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:background="@color/colorBackground"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:theme="@style/ButtonTheme"
    tools:context=".activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Choose the allergy type:"
            android:id="@+id/textViewType"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:id="@+id/peanut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="100dp"
            android:text="@string/peanut" />
        <CheckBox
            android:id="@+id/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="100dp"
            android:text="@string/milk" />
        <CheckBox
            android:id="@+id/egg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="100dp"
            android:text="@string/egg" />
        <CheckBox
            android:id="@+id/soy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="100dp"
            android:text="@string/soy" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="#DDFFFFFF"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/edit" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
